# solar_index

./: .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  License.md  README.md  README_SEE_L3_011.txt  f107.txt  omni2_daily_12664.fmt.txt  omni2_daily_12664.txt  sample.py  setup.cfg  setup.py  solar_index.py  solarind.py  sw_paper.py  test.py
docs/: Sample_figures.py  Space_Weather_2018_figures.py  sample_figures.py  sw_paper.py
solar_index/: EUVspectra.py  __init__.py  _core_class.py  _omni_data.py  _spectral_data.py  omni.py  omni_data.py  solar_index.py  spectral_data.py  utilities.py  utils.py
solar_index/data/: omni2_daily_12664.fmt.txt  omni2_daily_12664.txt
solar_index/tests/: test_euv.py  test_omni.py  test_utils.py
