[metadata]
name = solar_index
version = 0.3.0-dev
url = https://github.com/jklenzing/solar_index
author = Jeff Klenzing
author_email = jeffrey.klenzing@nasa.gov
description = Prepares solar irradiance index based on TIMED/SEE data
keywords =
  solar
  ionosphere
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Intended Audience :: Science/Research
  License :: BSD
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Operating System :: OS Independent
license_file = License.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 2.7
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  datetime
  numpy
  pandas<0.25 # FIXME: upper limit on pandas and xarray are just so Travis CI passes python 2.7 tests.
  xarray<0.12
  pysat
scripts =
